[package]
name = "slider-rs"
version = "0.0.2"
edition = "2024"
rust-version = "1.85"
description = "🎚️ A highly customizable slider component for WASM frameworks like Yew, Dioxus, and Leptos."
license = "MIT"
keywords = ["slider", "yew", "rust", "dioxus", "leptos"]
categories = ["web-programming", "science"]
repository = "https://github.com/opensass/slider-rs"
documentation = "https://docs.rs/slider-rs/"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
exclude = ["/assets", "/examples", "/bench"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", default-features = false, optional = true }
dioxus = { version = "0.6.3", features = ["html"], optional = true }
leptos = { version = "0.7.7", optional = true }
web-sys = { version = "0.3.77", features = [
    "FocusEvent",
    "HtmlInputElement",
    "InputEvent",
    "CssStyleDeclaration"
]}
uuid = { version = "1.17.0", features = ["v4", "js"] }

[features]
yew = ["dep:yew"]
dio = ["dioxus"]
lep = ["leptos"]

[profile.release]
opt-level = "z"
debug = false
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
log = "0.4.27"
bump2version = "0.1.6"
